--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   get: ^4.6.5
   firebase_core: ^2.11.0
   firebase_auth: ^4.5.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
