--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.11.0
   firebase_auth: ^4.5.0
   intl: ^0.17.0
+  cloud_firestore: ^4.8.1
 
 dev_dependencies:
   flutter_test:
