--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^4.5.0
   intl: ^0.17.0
   cloud_firestore: ^4.8.1
+  flutter_datetime_picker: ^1.5.1
 
 dev_dependencies:
   flutter_test:
