--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.17.0
   cloud_firestore: ^4.8.1
   flutter_datetime_picker: ^1.5.1
+  font_awesome_flutter: ^9.2.0
 
 dev_dependencies:
   flutter_test:
