--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   firebase_auth: ^4.5.0
   intl: ^0.17.0
   cloud_firestore: ^4.8.1
-  flutter_datetime_picker: ^1.5.1
+  flutter_datetime_picker_plus: ^2.0.1
   font_awesome_flutter: ^9.2.0
 
 dev_dependencies:
