--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,11 @@ dependencies:
   get: ^4.6.5
   firebase_core: ^2.11.0
   firebase_auth: ^4.5.0
-  intl: ^0.17.0
+  intl: ^0.18.0
   cloud_firestore: ^4.8.1
   flutter_datetime_picker_plus: ^2.0.1
   font_awesome_flutter: ^9.2.0
+  syncfusion_flutter_charts: ^22.1.34
 
 dev_dependencies:
   flutter_test:
